--- a/README.rdoc
+++ b/README.rdoc
@@ -2,23 +2,20 @@ This is a 'living slideshow' of code for the purposes of demonstrating various c
 
 ===========
 
-This is the base state of the API.  You should be starting here if you're using this as a code-based slideshow.
+As currently constituted, failed authentication will throw a rather useless error message or -- worse yet -- throw an uncaught exception if you give it an invalid token.
 
-Details worth noting are the use of a seperate API controller from the primary application controller.  This makes it easier to seperate your application's web-browser 'face' from it's API face, including seperating various pieces of logic.  If you're goal is to have a management portal seperate from the API usage, this is perfect.  If your goal is to reproduce your web facing version in your API, you're going to get code duplication -- results may therefore vary.
+Go open up app/controllers/api/v1/api_controller.rb -- this file is where we're going to be doing most of our work today.  Now, lets improve that error message to make it more readable.  The authenticate! method uses the built-in rails method authenticate_or_request_with_http_token.  If you return a truthy value from it, execution continues.  If you return a falsey value or the authorization token header is missing, it terminates processing and gives us that rather useless error message.
 
-So lets get started!
+So lets fix this.
 
-You'll need to create a user & a session manually -- do this however you prefer, but hte relevant models are User and session.  Next, try throwing a 'GET' request to the /api/v1/random route.  You'll get a rather unhelpful message about HTTP Token: Access denied.  It's an absolutely valid message, yes, but there are several issues with this particular message.  Most notable is the fact that while it's 100% human readable, it's not in the format you might have requested.  The following request:
+First, we're going to replace our call to authenticate_or_request_with_http_token to authenticate_with_http_token.  Doesn't give us the ugly error message anymore... but neither does it return a 401 status code if we don't have a login value.
 
-PUT /api/v1/random HTTP/1.1
-Host: localhost:3000
-Content-Type: application/json
-Authorization: token 1234567890
-Accept: application/json
-Cache-Control: no-cache
+Add the following class definition to the API controller -- I recommend right at the top, right above protect_from_forgery.
 
-{"seed":1}
+class Unauthenticated < StandardError; end
 
-Will result in a 401 response with a content-type header of text/html, which precisely matches with the body of 'HTTP Token: Access denied.'  Problem is, that's not what we asked for or want!  It also doesn't help us catch a rather non-obvious issue that makes it impossible for us to authenticate with that request.  What issue?  You'll see soon!
+Now, at the bottom of hte authenticate method, add:
 
-Please check out the next readme in the process.
+raise Unauthenticated.new unless @current_user
+
+Yay, now we're getting something halfway useful -- we might not know why we're getting the exception, but we know that it's being triggered from outside of the authentication block.  A little digging, and you'll rapidly realize you're never getting into the authentication block...  Because the Authorization: token header is actually supposed to be Authorization: Token.  A capital T is all you needed (along with a valid token, of course).
