--- a/README.rdoc
+++ b/README.rdoc
@@ -2,11 +2,15 @@ This is a 'living slideshow' of code for the purposes of demonstrating various c
 
 ===========
 
-Oh, wait -- if you've been writing tests, doing requests, or just plain paying attention, you might have spotted an issue.
+Our authenticate! method is getting a little ugly, with our logic jumping all over the place.  Lets take a look at it and see if we can't improve it a bit.  Our first move should be to check the token, and we shoudl fail right there if it's missing.  We shouldn't make our fellow programmers jump to the end of the method to see we're throwing an error over it eing missing, after all!
 
-Our first two error states return the same message!  Lets go ahead and break them apart a bit.  Add the following two exception classes to your api_controller:
+So, lets try the following:
 
-  class InvalidAuthorizationToken < Unauthenticated; end
-  class MissingAuthorizationToken < Unauthenticated; end
+  def authenticate!
+    token=authenticate_with_http_token { |token| token }
+    session=Session.where(:token=>token).first
+    raise MissingAuthorizationToken.new unless session
+    @current_user=session.user
+    raise InvalidAuthorizationToken.new unless @current_user
+  end
 
-Now, change our single rescue_from block into a set of three.  Define your own error messages, but you want to catch each of the three distinct possibilities.  Invalid token, missing token, and simply unauthenticated.  While we currently don't do anything with that class other than subclass it, my opinion on good practices is that you should still have a base catcher for it, just in case you later add a third subclass to it.  Otherwise, when you start throwing SessionAgedOut unauthentication exceptions, you aren't going to know why you're getting a 500 error!  At least htis way, you'll *know* it's your authentication scheme failing.
